// Run 'make protobuffer' from the root directory to generate 'api.pb.go'.
syntax = "proto3";
package ead;

message FindingAidDescription {
    string ID = 1;
    string Name = 2;
    string Summary = 3;
    repeated string Period = 4;
    string Institution = 5;
}

message NodeList {
  string Type = 1;
  repeated string Label = 2;
  repeated Node Nodes = 3;
}

message Node {
  string CTag = 1;
  int32 Depth = 7;
  string Type = 2;
  string SubType = 6;
  Header Header = 3;
  repeated string HTML = 5;
  repeated Node Nodes = 4;
  uint64 Order = 8;
  repeated string ParentIDs = 9;
  string Path = 10;
  string BranchID = 11;
  string Access = 12;
  string Material = 13;
}

message Header {
  string Type = 1;
  string InventoryNumber = 7;
  repeated NodeID ID = 2;
  repeated string Label = 3;
  repeated NodeDate Date = 4;
  string Physdesc = 5;
  bool DateAsLabel = 6;
  bool HasDigitalObject = 9;
  string DaoLink = 8;
}

message NodeID {
  string TypeID = 1;
  string Type = 2;
  string Audience = 3;
  string ID = 4;
}

message NodeDate {
  string Calendar = 1;
  string Era = 2;
  string Normal = 3;
  string Label = 4;
  string Type = 5;
}
